--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup Node
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
           node-version: 16
 
@@ -25,11 +25,15 @@ jobs:
       - name: Build project
         run: npm run build
 
+      - name: List dist contents
+        run: ls -al ./dist
+
       - name: Upload production-ready build files
-        uses: actions/upload-artifact@v3  # Updated to v3
+        uses: actions/upload-artifact@v3
         with:
           name: production-files
           path: ./dist
+          retention-days: 1
 
   deploy:
     name: Deploy
@@ -39,7 +43,7 @@ jobs:
 
     steps:
       - name: Download artifact
-        uses: actions/download-artifact@v3  # Updated to v3
+        uses: actions/download-artifact@v3
         with:
           name: production-files
           path: ./dist
